@@ -38,6 +38,7 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -208,7 +209,7 @@ public class ConsistencyWriter {
                     return Mono.error(e);
                 }
                 replicaStatusList.put(Uri.IGNORING, replicaStatuses);
-                replicaStatusList.put(Uri.ATTEMPTING,Set.of(primaryUri.getHealthStatusDiagnosticString()));
+                replicaStatusList.put(Uri.ATTEMPTING,new HashSet<>(Arrays.asList(primaryUri.getHealthStatusDiagnosticString())));
 
                 return this.transportClient.invokeResourceOperationAsync(primaryUri, request)
                                            .doOnError(
